k8s_yaml/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-word
  labels:
    role: test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: myapp
        tier: frontend
    spec:
      containers:
      - name: nginx
        image: nginx:stable
        resources:
          request:
            memory: 10MB
          limit:
            memory: 20 MB
