k8s_yaml/mulit-containers.yaml
apiVersion: v1
kind: Pod
metadata:
  name: sandip
  labels:
    role: test
spec:
  volumes:
  - name: shared-data
    emptyDir: {}
  containers:
  - name: container1
    image: busybox
    command: ["sh", "-c", "echo Hello from container1 >> /data/message; sleep 3600"]
    volumeMounts:
    - mountPath: /data
      name: shared-data
  - name: containers2
    image: busybox
    command: ["sh", "-c", "echo Hello from container2 >> /data/message; sleep 3600"]
    volumeMounts:
    - mountPath: /data
      name: shared-data
