k8s_yaml/rbac.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-delete
spec:
  serviceAccountName: delete-pod-sa
  containers:
  - name: nginx
    image: nginx:latest
