k8s_yaml/secret-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: secret-pod
spec:
  containers:
  - name: my-container
    image: busybox
    command: ["sh", "-c", "sleep 3000"]
    volumeMounts:
    - mountPath: /secret
      name: secret-volume
  volumes:
  - name: secret-volume
    secret:
      secretName: my-secret
