k8s_yaml/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-service
  labels:
    app: test
spec:
  selector:
    app: myapp
  ports:
  - protocol: TCP
    name: http
    targetPort: 9376
